# hamming-distance

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  HammingDistance.cpp  HammingDistance.h
src/test/: CMakeLists.txt  HammingDistanceTest.cpp  test_acceptance.py
